--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,15 @@ spring.datasource.password=490853Jrs
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# Mostrar las consultas SQL en consola
+spring.jpa.show-sql=true
+
+# Formatear las consultas SQL para que se lean mejor
+spring.jpa.properties.hibernate.format_sql=true
+
+# Mostrar los parámetros en las consultas
+logging.level.org.hibernate.type.descriptor.sql=TRACE
